# api/v1/activepromotion_types.go
@@ -96,9 +96,6 @@ const (
 	// ActivePromotionCondActiveDemotionFinished means a previous active environment has been demoted
 	ActivePromotionCondActiveDemoted ActivePromotionConditionType = "ActiveDemoted"
 
-	// ActivePromotionCondActivePromotionStarted means the pre-active namespace start promoting to be a new active
-	// In case of successful promoting
-	ActivePromotionCondActivePromotionStarted ActivePromotionConditionType = "ActivePromotionStarted"
 	// ActivePromotionCondActivePromoted means the pre-active namespace has been promoted to be a new active
 	// In case of successful promoting
 	ActivePromotionCondActivePromoted ActivePromotionConditionType = "ActivePromoted"
@@ -134,9 +131,9 @@ type ActivePromotionSpec struct {
 	// +optional
 	PromotedBy string `json:"promotedBy,omitempty"`
 
-	// SwitchBeforeDemote represents a flag for switching to the new namespace before demote active namespace
+	// NoDowntimeGuarantee represents a flag for switching to the new namespace before demoting the active namespace and guarantees the process will not have a downtime
 	// +optional
-	SwitchBeforeDemote bool `json:"switchBeforeDemote,omitempty"`
+	NoDowntimeGuarantee *bool `json:"noDowntimeGuarantee,omitempty"`
 }
 
 func (s *ActivePromotionSpec) SetTearDownDuration(d metav1.Duration) {
